# motscroises

./: .gitattributes  README.md
data/databases/: word_database.txt  word_database_test.txt  word_database_test_parasite.txt  word_with_def.txt
data/doxygen_documentation/html/: AttributedWords_8cpp_source.html  AttributedWords_8h_source.html  CrosswordController_8cpp_source.html  CrosswordController_8h_source.html  CrosswordFacade_8h_source.html  Crossword_8cpp_source.html  Crossword_8h_source.html  DefTable_8cpp_source.html  DefTable_8h_source.html  Difficulty_8cpp_source.html  Difficulty_8h_source.html  Domain_8cpp_source.html  Domain_8h_source.html  Lexicon_8cpp_source.html  Lexicon_8h_source.html  MainWindow_8cpp_source.html  MainWindow_8h_source.html  Pattern_8cpp_source.html  Pattern_8h_source.html  ShowGrid_8cpp_source.html  ShowGrid_8h_source.html  ShowNumber_8cpp_source.html  ShowNumber_8h_source.html  Solver_8cpp_source.html  Solver_8h_source.html  Variable_8cpp_source.html  Variable_8h_source.html  annotated.html  classAttributedWords-members.html  classAttributedWords.html  classCrossword-members.html  classCrossword.html  classCrosswordController-members.html  classCrosswordController.html  classCrosswordFacade-members.html  classCrosswordFacade.html  classDefTable-members.html  classDefTable.html  classDifficulty-members.html  classDifficulty.html  (+76 more)
data/doxygen_documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_7.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+9 more)
data/filesUTest/: test.json  testExport.json  testNegatif.json
data/misc/: clues.tsv  recup_def.py
data/misc/screens_test_grilles/: 100.txt
data/patterns/easy/: easy1.txt  easy10.txt  easy2.txt  easy3.txt  easy4.txt  easy5.txt  easy6.txt  easy7.txt  easy8.txt  easy9.txt
data/patterns/hard/: hard1.txt  hard10.txt  hard2.txt  hard3.txt  hard4.txt  hard5.txt  hard6.txt  hard7.txt  hard8.txt  hard9.txt
data/patterns/normal/: normal1.txt  normal10.txt  normal2.txt  normal3.txt  normal4.txt  normal5.txt  normal6.txt  normal7.txt  normal8.txt  normal9.txt
data/patterns/tests/: 10.txt  100.txt  10_4.txt  110.txt  12.txt  120.txt  14.txt  14_14_#.txt  14_5.txt  150.txt  20.txt  200.txt  250.txt  3.txt  30.txt  300.txt  3_4.txt  4.txt  40.txt  5.txt  50.txt  5_4.txt  6.txt  60.txt  6_4.txt  6_5.txt  7.txt  70.txt  8.txt  80.txt  9.txt  90.txt  9_8.txt  non_resoluble.txt  tests_perfs_blank.ods
data/user_saves/: my_grid.json
docs/report/memoire_tex/: bibliographie.bib  main.tex
organiz/meeting_reports/: 22_03_02.txt  22_03_09.txt  22_03_16.txt  22_03_22.txt  22_03_30.txt  22_04_06.txt  22_04_13.txt  22_04_20.txt
src/: CMakeLists.txt  CrossedWord_fr_FR.ts
src/src/: main.cpp  ourTests.cpp
src/src/controller/: CrosswordController.cpp  CrosswordController.h
src/src/model/: Crossword.cpp  Crossword.h  CrosswordFacade.h  Difficulty.cpp  Difficulty.h  utils.h
src/src/model/generation/: AttributedWords.cpp  AttributedWords.h  Domain.cpp  Domain.h  Lexicon.cpp  Lexicon.h  Pattern.cpp  Pattern.h  Solver.cpp  Solver.h  Variable.cpp  Variable.h
src/src/view/: DefTable.cpp  DefTable.h  MainWindow.cpp  MainWindow.h  ShowGrid.cpp  ShowGrid.h  ShowNumber.cpp  ShowNumber.h  mainwindow.ui
